--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,24 @@
 
 *{
     scroll-behavior: smooth;
-    
+}
+
+@keyframes scrollAnimation {
+    from {
+        opacity: 0;
+        scale:0.5;
+        /* transform: translateX(-100px); */
+        /* clip-path:inset(100% 100% 0 0) */
+    }    
+    to{
+        opacity: 1;
+        scale: 1;
+        /* transform: translateX(0px) */
+        /* clip-path:inset(0 0 0 0) */
+    }
+}
+.secs{
+    animation: scrollAnimation linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
 }
